--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "dependencies": {
     "moment": "^2.29.1",
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "^6.0.2",
-    "react-moment": "^1.1.1"
+    "next": "10.0.8",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-markdown": "^5.0.3",
+    "react-moment": "^1.1.1",
+    "react-tinacms-editor": "^0.40.0",
+    "react-tinacms-inline": "^0.40.0",
+    "react-tinacms-strapi": "^0.40.0",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "styled-components": "^5.2.1",
+    "tinacms": "^0.39.0"
   },
   "devDependencies": {
     "eslint": "7.30.0",
